fix welcome page, main content being hidden by container class properties

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -175,6 +175,11 @@ form.new_user {
   height: calc(100vh - 121px);
 }
 
+.welcome-nav {
+  min-width: 0;
+  height: 0;
+}
+
 .main-container {
   background-color: rgba(255, 255, 255, 0.74);
   width: 500px;
